<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView android:text="@string/texto_intro"
              android:textSize="@dimen/heading_size"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
        android:padding="12dp"/>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:text="@string/prompt_ratio_interes" android:textSize="@dimen/table_heading_size"
                  android:layout_width="wrap_content" android:layout_height="wrap_content"/>
        <EditText android:id="@+id/interest_rate_field" android:layout_height="wrap_content" android:layout_width="match_parent" android:inputType="numberDecimal">
            <requestFocus></requestFocus>
        </EditText>
    </LinearLayout>
    <Button android:text="@string/boton" android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:onClick="anadeFilaComparacion" android:layout_gravity="center_horizontal"/>
    <TableLayout android:id="@+id/payment_table" android:layout_width="match_parent" android:layout_height="wrap_content"
                 android:stretchColumns="0,1,2">
        <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:text="@string/ratio_interes" android:textSize="@dimen/table_heading_size"
                      android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:gravity="center_horizontal"/>
            <TextView android:text="@string/cuota_mensual" android:textSize="@dimen/table_heading_size"
                      android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:gravity="center_horizontal"/>
            <TextView android:text="@string/total_pagos" android:textSize="@dimen/table_heading_size"
                      android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:gravity="center_horizontal"/>
        </TableRow>
        <TableRow>
            <TextView android:layout_span="3"
                      android:layout_width="match_parent"
                      android:layout_height="3dp"
                      android:background="@color/divider_background"/>
        </TableRow>
    </TableLayout>
</LinearLayout>

